[package]
name = "chip_8"
version = "0.2.0"
authors = ["robo9k <robo9k@symlink.io>"]
edition = "2018"
description = """
CHIP-8 virtual machine / emulator
"""
readme = "README.md"
repository = "https://github.com/robo9k/chip8-rs"
license = "MIT OR Apache-2.0"
keywords = ["chip-8", "chip8"]
categories = ["emulators", "parser-implementations"]
build = "build.rs"
include = ["src/**/*", "README.md", "LICENSE-*", "COPYRIGHT", "build.rs"]
resolver = "2"

[features]
default = [
    "std",
]
std = [
    "rand/std",
    "rand/std_rng",
    "thiserror",
]

[dependencies]
thiserror = { version = "1.0.30", optional = true }
rand = { version = "0.8.4", default-features = false }

[dev-dependencies]
version-sync = "0.9"
skeptic = "0.13"
proptest = "0.10.0"

[build-dependencies]
skeptic = "0.13"

[badges]
codecov = { repository = "robo9k/chip8-rs" }
maintenance = { status = "experimental" }

[package.metadata.docs.rs]
targets = []